Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-08-05 (SVN):
    * menu.c: Adjusted music type menu so that midi-only or all-codecs
      can be selected.

2011-08-05 (SVN):
    * Document updates: Deleted ReleaseNotes-1.4.4, merged its content
      into ReleaseNotes-1.5.0.  Updated README.dos.  Updated the GPLv2
      document from the gnu ftp repo.  Updated rpm spec file.  Changed
      the beta version date to 2011-08-05.

2011-08-04 (SVN):
    * snd_gus.c: Did missing string constifications.

2011-08-03 (SVN):
    * gl_draw.c (GL_Upload32): Removed an unnecessary duplicated block
      of code for the no-mipmap+no-resample case.

2011-08-03 (SVN):
    * in_win.c: As per feature request #3383989, added support for the
      6th joystick axis for up movement controlled by joyupthreshold
      and joyupsensitivity. Ported from the quake2 source.

2011-08-02 (SVN):
    * hexen2/cl_input.c (CL_BaseMove): Simplified the "speed key or slow
      key" decision by using an xor in the if condition.
    * hexenworld/client/cl_input.c (CL_BaseMove): Ported the "speed key
      to act as slow key" behaviour from hexen2 to hexenworld.

2011-08-02 (SVN):
    * quakefs.c, quakefs.h: Removed the FS_LoadBufFile() method.

2011-08-02 (SVN):
    * draw.h, gl_draw.c: Removed Draw_PicFileBuf() which is not needed
      for a long time now.

2011-08-02 (SVN):
    * gl_vidnt.c, gl_vidsdl.c: Changed VID_SetPalette() to not use the
      FS_LoadBufFile() method.

2011-08-02 (SVN):
    * Bumped beta version date to 2011-08-02.

2011-08-02 (SVN):
    * Removed Quake texture resampler and 8bit texture extensions code,
      kept the Hexen II versions instead.

2011-08-02 (SVN):
    * gl_draw.c (GL_Upload8): Tidy up and clean up the confusing alpha
      loops.

2011-07-28 (SVN):
    * h2patch (get_millisecs): For DOS, don't do the 64bit multiplication
      and live with a minor precision loss.

2011-07-28 (SVN):